<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/taskSettingInformation"
        android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/taskSettingsNotificationTitle"/>
            <TextView
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:text="@string/taskSettingsNotificationSubtitle"/>
        </LinearLayout>
        <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/enableNotificationSwitch" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/taskSettingsHourTitle"/>
            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/taskSettingsHourSubtitle"/>
        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tastSettingsChangeNotificationHour"
            android:id="@+id/changeHour" />
    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/notificationHour"
        android:layout_gravity="center_horizontal"
        android:textSize="48sp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/taskSettingsRingtoneTitle"/>
            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/taskSettingsRingtoneSubtitle"/>
        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tastSettingsChangeRingtoneButton"
            android:id="@+id/changeRingtone" />
    </LinearLayout>


</LinearLayout>